--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 click==8.0.3
 Flask==2.0.2
+email-validator==1.1.3
+Flask-WTF==1.0.0
+Flask-Mail==0.9.1
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
